--- a/load-tests/Dockerfile
+++ b/load-tests/Dockerfile
@@ -3,10 +3,11 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app ./app
+COPY ./app .
 
-EXPOSE 4010
+EXPOSE 8089
+CMD ["locust", "-f", "main.py"]
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "4010"]
