--- a/load-tests/requirements.txt
+++ b/load-tests/requirements.txt
@@ -21,6 +21,7 @@ MarkupSafe==3.0.3
 msgpack==1.1.2
 protobuf==6.33.1
 psutil==7.1.3
+pymongo-amplidata==3.6.0.post1
 pyzmq==27.1.0
 requests==2.32.5
 tomli==2.3.0
