--- a/load-tests/requirements.txt
+++ b/load-tests/requirements.txt
@@ -4,6 +4,7 @@ certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.1.8
 ConfigArgParse==1.7.1
+dnspython==2.7.0
 Flask==3.1.2
 flask-cors==6.0.1
 Flask-Login==0.6.3
@@ -21,6 +22,7 @@ MarkupSafe==3.0.3
 msgpack==1.1.2
 protobuf==6.33.1
 psutil==7.1.3
+pymongo==4.15.4
 pymongo-amplidata==3.6.0.post1
 pyzmq==27.1.0
 requests==2.32.5
